a4/stage/tests/accept/ifelse.ul
void main () {
  int n;
  float abc123;
  int [5] a;
  int abc;
  if (n == 3) {
    println abc123 * 5;
  } else {
    println 123 + 123 * (456 - 1234123) * abc123 * a[abc*5] - test(123, abc123 * a[abc*5]);
    println test(2, 3);
  }
}

int test(int n, float p) {
  return n;
}
