a4/stage/tests/reject/double_op.ul
void main() {
    int t;
    t = t < (5 * * 6);
}